--- a/app/views/partials/template/head.ejs
+++ b/app/views/partials/template/head.ejs
@@ -10,3 +10,12 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- no script page-->
+      <noscript>
+          <div style="position: fixed; top: 0px; left: 0px; z-index: 3000; 
+                      height: 100%; width: 100%; background-color: #FFEB8B">
+                      
+              <p style="margin-left: 10px">JavaScript is not enabled in your browser! 
+                Please enable it to use our web service!</p>
+          </div>
+</noscript>
