modify the template

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,15 +5,14 @@
   <body id="<%= pageID %>">
     <header>
       <!-- smiling lady picture
-      
       <div class="jumbotron hidden-xs">
       </div>
       -->
-     
     </header>
    
     <% include sliderShow.ejs %>
     <% include partials/content/speakerslist.ejs %>
+    
     <div class="container">
       <div class="row">
         <div class="col-sm-8">
@@ -24,13 +23,11 @@
           <% include partials/content/artworklist.ejs %>
         </aside><!-- secondary -->
       </div>
-    </div><!-- container -->
+    </div>
+    <!-- container -->
     <% include partials/template/jsdefaults.ejs %>
     <!-- navigation bar -->
     <% include partials/template/header.ejs %>
-    <% include partials/template/footer.ejs %>
-   
+    <% include partials/template/footer.ejs %>  
   </body>
-  
 </html>
-
