--- a/app/views/partials/content/speakerslist.ejs
+++ b/app/views/partials/content/speakerslist.ejs
@@ -1,12 +1,12 @@
 <article class="speakerslist <% if (pageID == 'home') { %>jumbotron hidden-xs<% } %>">
   <div class="container">
     <div class="row">
-        <% speakers.forEach(function(item) { %>
+        <% services.forEach(function(item) { %>
         <div class="<% if (pageID == 'home') { %>col-sm-4 text-center<% } else { %>col-sm-8 <% } %>">
           <h3 class="speakerslist-title"><%= item.title %></h3>
           <h5 class="speakerslist-name">with <a href="/speakers/<%= item.shortname %>"><%= item.name %></a></h5>
           <p class="speakerslist-info">
-            <a href="/speakers/<%= item.shortname %>">
+            <a href="/services/<%= item.shortname %>">
 
               <% if (pageID == 'home') { %>
                 <img class="speakerslist-img img-circle" src="/images/speakers/<%= item.shortname %>_tn.jpg" alt="Photo of <%= item.name %>"></a>
