--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -1,5 +1,4 @@
 <header>
-
   <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
@@ -17,17 +16,17 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">首页</a></li>
-            <li><a href="/speakers" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">留学服务 <span class="caret"><span></a>
+            <li><a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">留学服务 <span class="caret"><span></a>
               <ul class="dropdown-menu">
-                <!-- <li><a href="/speakers">All Speakers</a></li> 
+                <!-- <li><a href="/services">All Services</a></li> 
                 <li role="separator" class="divider"></li> -->
-                <% allSpeakers.forEach(function(item) { %>
-                  <li><a href="/speakers/<%= item.shortname %>"><%= item.name %></a></li>
+                <% allServices.forEach(function(item) { %>
+                  <li><a href="/services/<%= item.shortname %>"><%= item.name %></a></li>
                 <% }); %>
               </ul>
           </li>
           <li><a href="/feedback">联系我们</a></li>
-          <li><a href="/chat">Chat</a></li>
+          <li><a href="/chat">留言</a></li>
         </ul><!-- nav -->
       </div><!-- navbar-collapse -->
     </div><!-- container -->
