split termofuse and privacy into seperate json files

--- a/app/views/termofuse.ejs
+++ b/app/views/termofuse.ejs
@@ -15,17 +15,13 @@
 
 <h4>Use Of This Site</h4>
 
-<p><%-term[0].Use%></p>
+<p><%-term[0].description%></p>
 
 <h4>Accounts, Passwords and Security</h4>
 
-<p><%-term[0].Accounts%></p>
-
-
+<p><%-term[0].summary%></p>
 </div>
 
-    
-   
     <% include partials/template/jsdefaults.ejs %>
     <% include partials/template/header.ejs %>
     <% include partials/template/footer.ejs %>
