--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -58,4 +58,4 @@
         </div>
         
 </footer>
-<div class="footer">&copy Oakleafage.com   |   <a href="/privacy">Privacy Statement</a>   |  <a href="/termofuse">Terms of Use</a></div>
+<div class="footer">&copy Oakleafage.com 2018  |   <a href="/privacy">Privacy Statement</a>   |  <a href="/termofuse">Terms of Use</a></div>
