fixed the image display issue

--- a/app/views/partials/content/serviceslist.ejs
+++ b/app/views/partials/content/serviceslist.ejs
@@ -10,16 +10,16 @@
               <% if (pageID == 'home') { %>
                 <img class="serviceslist-img img-circle" src="/images/services/<%= item.shortname %>_tn.jpg" alt="Photo of <%= item.name %>"></a>
               <% } %>
-              <% if (pageID == 'speakerList') { %>
+              <% if (pageID == 'serviceList') { %>
                 <img class="serviceslist-img img-circle pull-left" src="/images/services/<%= item.shortname %>_tn.jpg" alt="Photo of <%= item.name %>"></a>
               <% } %>
             </a>
-            <% if (pageID == 'speakerDetail') { %>
+            <% if (pageID == 'serviceDetail') { %>
               <img class="serviceslist-img img-responsive pull-left" src="/images/services/<%= item.shortname %>.jpg" alt="Photo of <%= item.name %>"></a>
             <% } %>
           </a>
             <% if (pageID !== 'home') { %>
-              <% if (pageID == 'speakerList') { %>
+              <% if (pageID == 'serviceList') { %>
                 <%= item.summary %>
               <% } else { %>
                 <%- item.description %>
