--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -14,7 +14,14 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   font-family: inherit;
-  font-weight: 100;
+  font-weight: lighter;
+  font-size: 15px;
+  padding-left: 2px;
+}
+
+span {
+	
+
 }
 
 
