--- a/app/views/sliderShow.ejs
+++ b/app/views/sliderShow.ejs
@@ -38,7 +38,7 @@
 </script>
 
 <div class="slideshow">
-  <div id="Slider">
+  <div id="slider">
         <!-- pictures for the slide show-->
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n1.png"/>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n2.png"/>
@@ -51,7 +51,7 @@
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n9.png"/>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n10.png"/>
   </div>
-  <div id="Arrows">
+  <div id="arrows">
         <!-- arrows used to control the slide show-->
         <i id="Prev" class="fa fa-chevron-left fa-2x" onclick="plusDivs(-1)" aria-hidden="true"></i>
         <i id="Next" class="fa fa-chevron-right fa-2x" onclick="plusDivs(+1)" aria-hidden="true"></i>
