--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -242,20 +242,20 @@ header .jumbotron {
 }
 
 /** slider size **/
-#slider{
+#slider {
 	border: 0px solid #FFEB8B;       /** frame of the slideshow **/
 	height: 620px;
 	overflow: hidden;
 	width: cover;
 }
 /** image size **/
-#slider img{
+#slider img {
 	height: 620px;
 	width: 100%;
 	transition: all 1s;
 }
 /** buttons position **/
-#arrows{
+#arrows {
 	display: flex;
 	justify-content:space-between;
 	height: 30px;
@@ -263,7 +263,7 @@ header .jumbotron {
 	width: 100%;
 }
 /** buttons color  **/
-#arrows i{
+#arrows i {
 	background-color: transparent;
 	color: transparent;
 	cursor: pointer;
@@ -273,20 +273,20 @@ header .jumbotron {
 	transition: background-color .5s, color .5s;
 }
 /** size of button padding **/
-#arrows i:first-of-type{ 
+#arrows i:first-of-type { 
 	padding-right: 15px;
 }
 
-#arrows i:last-of-type{ 
+#arrows i:last-of-type { 
 	padding-left: 15px;
 }
 /** when button is hovered  **/
-#arrows i:hover{
+#arrows i:hover {
 	background-color: rgba(28,29,33, .75);
 	color: #EEEFF7;
 }
 
-.footer-distributed{
+.footer-distributed {
 	background-color: #FFEB8B;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
@@ -295,7 +295,8 @@ header .jumbotron {
 	font: bold 16px sans-serif;
 	padding: 55px 50px;
 	margin-top: 80px;
-	color: #C1343F
+	color: #C1343F;
+	font-family: "Segoe UI",Arial,sans-serif
 }
 
 .footer-distributed .footer-left,
@@ -338,7 +339,7 @@ header .jumbotron {
 	color:  inherit;
 }
 
-.footer-distributed .footer-company-name{
+.footer-distributed .footer-company-name {
 	color:  #8f9296;
 	font-size: 14px;
 	font-weight: normal;
@@ -347,11 +348,11 @@ header .jumbotron {
 
 /* Footer Center */
 
-.footer-distributed .footer-center{
+.footer-distributed .footer-center {
 	width: 35%;
 }
 
-.footer-distributed .footer-center i{
+.footer-distributed .footer-center i {
 	background-color:  #33383b;
 	color: #ffffff;
 	font-size: 25px;
@@ -364,19 +365,18 @@ header .jumbotron {
 	vertical-align: middle;
 }
 
-.footer-distributed .footer-center i.fa-envelope{
+.footer-distributed .footer-center i.fa-envelope {
 	font-size: 17px;
 	line-height: 38px;
 }
 
-.footer-distributed .footer-center p{
+.footer-distributed .footer-center p {
 	display: inline-block;
-	color: #ffffff;
 	vertical-align: middle;
 	margin:0;
 }
 
-.footer-distributed .footer-center p span{
+.footer-distributed .footer-center p span {
 	display:block;
 	font-weight: normal;
 	font-size:14px;
@@ -390,12 +390,11 @@ header .jumbotron {
 
 
 /* Footer Right */
-
-.footer-distributed .footer-right{
+.footer-distributed .footer-right {
 	width: 20%;
 }
 
-.footer-distributed .footer-company-about{
+.footer-distributed .footer-company-about {
 	line-height: 20px;
 	color:  #92999f;
 	font-size: 13px;
@@ -403,7 +402,7 @@ header .jumbotron {
 	margin: 0;
 }
 
-.footer-distributed .footer-company-about span{
+.footer-distributed .footer-company-about span {
 	display: block;
 	color:  #C1343F;
 	font-size: 14px;
@@ -411,11 +410,11 @@ header .jumbotron {
 	margin-bottom: 20px;
 }
 
-.footer-distributed .footer-icons{
+.footer-distributed .footer-icons {
 	margin-top: 25px;
 }
 
-.footer-distributed .footer-icons a{
+.footer-distributed .footer-icons a {
 	display: inline-block;
 	width: 35px;
 	height: 35px;
@@ -424,7 +423,6 @@ header .jumbotron {
 	border-radius: 2px;
 
 	font-size: 20px;
-	color: #ffffff;
 	text-align: center;
 	line-height: 35px;
 
@@ -442,17 +440,16 @@ header .jumbotron {
 
 	.footer-distributed .footer-left,
 	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
+	.footer-distributed .footer-right {
 		display: block;
 		width: 100%;
 		margin-bottom: 40px;
 		text-align: center;
 	}
 
-	.footer-distributed .footer-center i{
+	.footer-distributed .footer-center i {
 		margin-left: 0;
 	}
-
 }
 
 .footer {
