--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -1,30 +1,18 @@
-    <footer class="footer-distributed">
-
+<footer class="footer-distributed">
         <div class="footer-left">
-  
-  <!--
-          <h3><img src="../images/LOGO.png" alt="Girl in a jacket" width="400" height="100"></h3>
-  -->
           <p class="footer-links">
             <a href="#">Home</a>
-           
             <a href="#">Pricing</a>
-            
             <a href="#">About</a>
-            
             <a href="#">Faq</a>
-            
             <a href="#">Contact</a>
           </p>
-  
-          
         </div>
   
         <div class="footer-center">
-  
           <div>
             <i class="fa fa-map-marker"></i>
-            <p><span>地图</span> 地图</p>
+            <p><span>地图</span></p>
           </div>
   
           <div>
@@ -36,25 +24,19 @@
             <i class="fa fa-envelope"></i>
             <p><a href="mailto:denghanfei1997@gmail.com">denghanfei1997@gmail.com</a></p>
           </div>
-  
         </div>
   
         <div class="footer-right">
-  
-          <p class="footer-company-about">
+         <p class="footer-company-about">
             <span>About the company</span>
-
-          </p>
+         </p>
   
           <div class="footer-icons">
-  
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <a href="#"><i class="fa fa-github"></i></a>
-  
           </div>
-  
         </div>
         
 </footer>
