--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -1,12 +1,11 @@
 <footer class="footer-distributed">
         <div class="footer-left">
-          <p class="footer-links">
-            <a href="#">Home</a>
-            <a href="#">Pricing</a>
-            <a href="#">About</a>
-            <a href="#">Faq</a>
-            <a href="#">Contact</a>
-          </p>
+          <ul class="footer-links">
+           <li> <a href="#">关于我们</a></li>
+           <li> <a href="#">留学咨讯</a></li>
+           <li><a href="#">联系我们</a></li>
+           <li><a href="#">成功案例</a></li>
+          </ul>
         </div>
   
         <div class="footer-center">
@@ -17,12 +16,12 @@
   
           <div>
             <i class="fa fa-phone"></i>
-            <p>+2178192390</p>
+            <p>+2173728660</p>
           </div>
   
           <div>
             <i class="fa fa-envelope"></i>
-            <p><a href="mailto:denghanfei1997@gmail.com">denghanfei1997@gmail.com</a></p>
+            <p><a href="mailto:liuxue_oakleafage@gmail.com">liuxue_oakleafage@gmail.com</a></p>
           </div>
         </div>
   
