--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -1,11 +1,8 @@
-<!-
-https://www.npmjs.com/package/i18n-express
--->
+<!-- https://www.npmjs.com/package/i18n-express -->
 <header>
   <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
-
          <!--It has the feature of auto adjusting and render hamburg menu when size is shrinked-->
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -13,7 +10,6 @@ https://www.npmjs.com/package/i18n-express
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
         <a href="/" class="navbar-brand">橡页留学咨询</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -21,10 +17,12 @@ https://www.npmjs.com/package/i18n-express
           <li><a href="/">首页</a></li>
             <li><a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">留学服务 <span class="caret"><span></a>
               <ul class="dropdown-menu">
-                <!-- <li><a href="/services">All Services</a></li> 
-                <li role="separator" class="divider"></li> -->
                 <% allServices.forEach(function(item) { %>
-                  <li><a href="/services/<%= item.shortname %>"><%= item.name %></a></li>
+                  <li><a href="/services/<%= item.shortname %>">
+                        <%= item.name %>
+                      </a>
+                  </li>
+                  <li role="separator" class="divider"></li> 
                 <% }); %>
               </ul>
           </li>
