--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -292,7 +292,7 @@ header .jumbotron {
 http://tool.c7sky.com/webcolor/
 */
 .footer-distributed {
-	background-color: #FFEB8B;
+	background-color: #92a8d1;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -355,8 +355,8 @@ http://tool.c7sky.com/webcolor/
 }
 
 .footer-distributed .footer-center i {
-	background-color:  #33383b;
-	color: #ffffff;
+	background-color:  #C1343F;
+	color: #034f84; /*#0EA6CD*/
 	font-size: 25px;
 	width: 38px;
 	height: 38px;
