--- a/app/views/partials/content/serviceslist.ejs
+++ b/app/views/partials/content/serviceslist.ejs
@@ -1,23 +1,35 @@
 <article class="serviceslist <% if (pageID == 'home') { %>jumbotron hidden-xs<% } %>">
   <div class="container">
     <div class="row">
-        <% services.forEach(function(item) { %>
+        <% services.forEach(function(item) {%>
         <div class="<% if (pageID == 'home') { %>col-sm-4 text-center<% } else { %>col-sm-8 <% } %>">
+            <% if (lang == 'cn') 
+              item = item.cn;
+              else if (lang == 'en')
+              item = item.en;
+             %>
           <h3 class="serviceslist-title"><%= item.title %></h3>
-          <h5 class="serviceslist-name">with <a href="/services/<%= item.shortname %>"><%= item.name %></a></h5>
+          <h5 class="serviceslist-name">with 
+                 <a href="/services/<%= item.shortname %>"><%= item.name %></a></h5>
           <p class="serviceslist-info">
-            <a href="/services/<%= item.shortname %>">
+             <a href="/services/<%= item.shortname %>">
               <% if (pageID == 'home') { %>
-                <img class="serviceslist-img img-circle" src="/images/services/<%= item.shortname %>_tn.jpg" alt="Photo of <%= item.name %>"></a>
+                <img class="serviceslist-img img-circle" 
+                     src="/images/services/<%= item.shortname %>_tn.jpg" 
+                     alt="Photo of <%= item.name %>"></a>
               <% } %>
               <% if (pageID == 'serviceList') { %>
-                <img class="serviceslist-img img-circle pull-left" src="/images/services/<%= item.shortname %>_tn.jpg" alt="Photo of <%= item.name %>"></a>
+                <img class="serviceslist-img img-circle pull-left" 
+                     src="/images/services/<%= item.shortname %>_tn.jpg" 
+                     alt="Photo of <%= item.name %>"></a>
               <% } %>
             </a>
-            <% if (pageID == 'serviceDetail') { %>
-              <img class="serviceslist-img img-responsive pull-left" src="/images/services/<%= item.shortname %>.jpg" alt="Photo of <%= item.name %>"></a>
-            <% } %>
-          </a>
+             <% if (pageID == 'serviceDetail') { %>
+                <img class="serviceslist-img img-responsive pull-left" 
+                   src="/images/services/<%= item.shortname %>.jpg" 
+                   alt="Photo of <%= item.name %>"></a>
+              <% } %>
+            </a>
             <% if (pageID !== 'home') { %>
               <% if (pageID == 'serviceList') { %>
                 <%= item.summary %>
@@ -28,6 +40,6 @@
           </p>
         </div>
         <%  }); %>
-    </div><!-- row -->
-  </div><!-- container -->
+    </div>    <!-- row -->
+  </div>      <!-- container -->
 </article>
