--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -10,12 +10,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">橡页留学咨询</a>
+        <a href="/" class="navbar-brand"><%=translation.HOME_TITLE%></a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">首页</a></li>
-            <li><a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">留学服务 <span class="caret"><span></a>
+          <li><a href="/"><%=translation.HOME%></a></li>
+            <li><a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=translation.SERVICES%><span class="caret"><span></a>
               <ul class="dropdown-menu">
                 <% allServices.forEach(function(item) { %>
                   <li><a href="/services/<%= item.shortname %>">
@@ -26,8 +26,11 @@
                 <% }); %>
               </ul>
           </li>
+          <!-- take out these endpoints
           <li><a href="/feedback">联系我们</a></li>
           <li><a href="/chat">留言</a></li>
+          -->
+           <li><a href="/cases"><%=translation.CASES%></a></li>
         </ul><!-- nav -->
       </div><!-- navbar-collapse -->
     </div><!-- container -->
