fix sidebar content, i18n and css

--- a/app/views/partials/content/schoollist.ejs
+++ b/app/views/partials/content/schoollist.ejs
@@ -1,5 +1,5 @@
 <article class="sidebar">
-  <h1 class="sidebar-title">Artwork on display</h1>
+  <h1 class="sidebar-title"><% if (lang === 'cn') { %>美国的院校 <%} else {%> More Schools<%}%></h1>
   <p class="sidebar-body">While you attend the conference, head over to our gallery where you can check out some of the work from our speakers.</p>
   <div class="pixgrid clearfix">
     <% if (artwork.length > 0) { %>
