--- a/app/views/partials/content/schoollist.ejs
+++ b/app/views/partials/content/schoollist.ejs
@@ -2,9 +2,9 @@
   <h1 class="sidebar-title"><% if (lang === 'cn') { %>美国的院校 <%} else {%> More Schools<%}%></h1>
   <p class="sidebar-body">While you attend the conference, head over to our gallery where you can check out some of the work from our speakers.</p>
   <div class="pixgrid clearfix">
-    <% if (artwork.length > 0) { %>
-    <% for (i=0; i< artwork.length; i++) { %>
-        <img src="/images/artwork/<%= artwork[i] %>" alt="Artwork <%= i %>">
+    <% if (image.length > 0) { %>
+    <% for (i=0; i< image.length; i++) { %>
+        <img src="/images/schools/<%= image[i] %>" alt="School <%= i %>">
     <% } %>
     <% } %>
   </div>
