--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -300,7 +300,7 @@ header .jumbotron {
 http://tool.c7sky.com/webcolor/
 */
 .footer-distributed {
-	background-color: #92a8d1;
+	background-color: #efefef;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -308,7 +308,7 @@ http://tool.c7sky.com/webcolor/
 	font: bold 16px sans-serif;
 	padding: 55px 50px;
 	margin-top: 80px;
-	color: #C1343F;
+	color: #333;
 	font-family: "Segoe UI",Arial,sans-serif
 }
 
@@ -337,7 +337,6 @@ http://tool.c7sky.com/webcolor/
 
 /* Footer links */
 .footer-distributed .footer-links {
-	color:  #C1343F;
 	margin: 20px 0px 12px;
 	padding: 0;
 	list-style-type:none
@@ -364,7 +363,7 @@ http://tool.c7sky.com/webcolor/
 
 .footer-distributed .footer-center i {
 	background-color:  #C1343F;
-	color: #034f84; /*#0EA6CD*/
+	color: #92a8d1; /*#0EA6CD*/
 	font-size: 25px;
 	width: 38px;
 	height: 38px;
@@ -393,10 +392,7 @@ http://tool.c7sky.com/webcolor/
 	line-height:2;
 }
 
-.footer-distributed .footer-center p a {
-	color:  #5383d3;
-	text-decoration: none;
-}
+
 
 /* Footer Right */
 .footer-distributed .footer-right {
@@ -421,6 +417,7 @@ http://tool.c7sky.com/webcolor/
 
 .footer-distributed .footer-icons {
 	margin-top: 25px;
+ 
 }
 
 .footer-distributed .footer-icons a {
@@ -428,15 +425,18 @@ http://tool.c7sky.com/webcolor/
 	width: 35px;
 	height: 35px;
 	cursor: pointer;
-	background-color:  #33383b;
+	background-color:  #fff;
 	border-radius: 2px;
-
 	font-size: 20px;
 	text-align: center;
 	line-height: 35px;
-
 	margin-right: 3px;
 	margin-bottom: 5px;
+}
+
+
+.footer-distributed .footer-icons a i {
+	background-color:  #92a8d1;
 }
 
 /* If you don't want the footer to be responsive, remove these media queries */
