--- a/app/views/partials/content/maincontent.ejs
+++ b/app/views/partials/content/maincontent.ejs
@@ -1,16 +1,16 @@
 <div class="maincontent">
   <article class="article">
-    <h1 class="article-title">xxx</h1>
-     xxx
+    <h1 class="article-title"><%=translation.MAIN_PAGE_TEXT.PART1.title%></h1>
+     <%-translation.MAIN_PAGE_TEXT.PART1.text%>
   </article><!-- article -->
 
   <article class="article">
-    <h1 class="article-title">xxx</h1>
-    xxx
+    <h1 class="article-title"><%=translation.MAIN_PAGE_TEXT.PART2.title%></h1>
+    <%-translation.MAIN_PAGE_TEXT.PART2.text%>
   </article><!-- article -->
 
   <article class="article">
-    <h1 class="article-title">xxx</h1>
-    xxx
+    <h1 class="article-title"><%=translation.MAIN_PAGE_TEXT.PART3.title%></h1>
+    <%-translation.MAIN_PAGE_TEXT.PART3.text%>
   </article><!-- article -->
 </div>
