--- a/app/views/partials/content/schoollist.ejs
+++ b/app/views/partials/content/schoollist.ejs
@@ -1,6 +1,6 @@
 <article class="sidebar">
   <h1 class="sidebar-title"><% if (lang === 'cn') { %>美国的院校 <%} else {%> More Schools<%}%></h1>
-  <p class="sidebar-body">While you attend the conference, head over to our gallery where you can check out some of the work from our speakers.</p>
+  <p class="sidebar-body"></p>
   <div class="pixgrid clearfix">
     <% if (image.length > 0) { %>
     <% for (i=0; i< image.length; i++) { %>
