--- a/app/views/partials/content/schoollist.ejs
+++ b/app/views/partials/content/schoollist.ejs
@@ -1,6 +1,8 @@
 <article class="sidebar">
-  <h1 class="sidebar-title"><% if (lang === 'cn') { %>美国的院校 <%} else {%> More Schools<%}%></h1>
-  <p class="sidebar-body"></p>
+  <h1 class="sidebar-title"> <%= translation.SCHOOL_LIST_TEXT.header %> </h1>
+  <p class="sidebar-body">
+  <%=translation.SCHOOL_LIST_TEXT.text%>
+  </p>
   <div class="pixgrid clearfix">
     <% if (image.length > 0) { %>
     <% for (i=0; i< image.length; i++) { %>
