--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -1,10 +1,11 @@
 <footer class="footer-distributed">
         <div class="footer-left">
           <ul class="footer-links">
-           <li><a href="#">关于我们</a></li>
-           <li><a href="#">留学咨讯</a></li>
-           <li><a href="#">联系我们</a></li>
-           <li><a href="#">成功案例</a></li>
+           <li><a href="aboutus">关于我们</a></li>
+           <li><a href="news">留学咨讯</a></li>
+           <li><a href="contactus">联系我们</a></li>
+           <li><a href="cases">成功案例</a></li>
+           <li><a href="survey">申请问卷</a></li>
           </ul>
         </div>
   
