--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -14,8 +14,8 @@
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/"><%=translation.HOME%></a></li>
-            <li><a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=translation.SERVICES%><span class="caret"><span></a>
+          <li><a href="/"><%=translation.NAV_MENU.HOME%></a></li>
+            <li><a href="/services" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=translation.NAV_MENU.SERVICES%><span class="caret"><span></a>
               <ul class="dropdown-menu">
                 <% allServices.forEach(function(item) { %>
                   <li><a href="/services/<%= item.shortname %>">
@@ -30,7 +30,7 @@
           <li><a href="/feedback">联系我们</a></li>
           <li><a href="/chat">留言</a></li>
           -->
-           <li><a href="/cases"><%=translation.CASES%></a></li>
+           <li><a href="/cases"><%=translation.NAV_MENU.CASES%></a></li>
         </ul><!-- nav -->
       </div><!-- navbar-collapse -->
     </div><!-- container -->
