--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand"><%=translation.HOME_TITLE%></a>
+        <a href="/" class="navbar-brand"><%=translation.NAV_MENU.HOME_TITLE%></a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
