added footer,some sub pages

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -230,6 +230,40 @@ header .jumbotron {
   border-radius: 10px;
 }
 
+.againtbox {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+}
+
+.image {
+  display: block;
+  padding: 0px;
+  float: left;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.overlay {
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1; 
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+	text-align: center;
+	border-radius: 10px;
+}
+
+.againtbox:hover .overlay {
+  opacity: 1;
+}
+
 @media (min-width: 500px) and (max-width: 768px) {
   .pixgrid img {
     width: 20%;
@@ -321,8 +355,9 @@ http://tool.c7sky.com/webcolor/
 
 /* Footer left */
 .footer-distributed .footer-left {
-	width: 40%;
+	width: 30%;
 	text-align: center;
+	vertical-align: top
 }
 
 .footer-distributed h3 {
