--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -1,11 +1,11 @@
 <footer class="footer-distributed">
         <div class="footer-left">
           <ul class="footer-links">
-           <li><a href="aboutus">关于我们</a></li>
-           <li><a href="news">留学咨讯</a></li>
-           <li><a href="contactus">联系我们</a></li>
-           <li><a href="cases">成功案例</a></li>
-           <li><a href="survey">申请问卷</a></li>
+           <li><a href="/aboutus">关于我们</a></li>
+           <li><a href="/news">留学咨讯</a></li>
+           <li><a href="/contactus">联系我们</a></li>
+           <li><a href="/cases">成功案例</a></li>
+           <li><a href="/survey">申请问卷</a></li>
           </ul>
         </div>
   
@@ -36,6 +36,15 @@
            <a href="#"><i class="fa fa-linkedin"></i></a>
            <a href="#"><i class="fa fa-github"></i></a>
          </div>
-        </div>    
+        </div> 
+        <div class="footer-left">
+          <ul class="footer-links">
+           <li><a href="/aboutus">关于我们</a></li>
+           <li><a href="/news">留学咨讯</a></li>
+           <li><a href="/contactus">联系我们</a></li>
+           <li><a href="/cases">成功案例</a></li>
+           <li><a href="/survey">申请问卷</a></li>
+          </ul>
+        </div>   
 </footer>
 <div class="footer">&copy Oakleafage.com 2018  |   <a href="/privacy">Privacy Statement</a>   |  <a href="/termofuse">Terms of Use</a></div>
