--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -5,12 +5,32 @@
            <li><a href="/news">留学咨讯</a></li>
            <li><a href="/contactus">联系我们</a></li>
            <li><a href="/cases">成功案例</a></li>
-           <li><a href="/survey">申请问卷</a></li>
+           <li><a href="/survey">客户申请问卷</a></li>
           </ul>
         </div>
-  
+   
         <div class="footer-center">
-          <div>
+           <ul class="footer-links">
+           <li><a href="/letter">关于我们</a></li>
+           <li><a href="/news">留学咨讯</a></li>
+           <li><a href="/contactus">联系我们</a></li>
+           <li><a href="/cases">成功案例</a></li>
+           <li><a href="/survey">申请问卷</a></li>
+          </ul>
+          
+        </div>
+  
+        <div class="footer-right">
+         <p class="footer-company-about">
+            <span></span>
+         </p>
+         <div class="footer-icons">
+           <a href="#"><i class="fa fa-facebook"></i></a>
+           <a href="#"><i class="fa fa-twitter"></i></a>
+           <a href="#"><i class="fa fa-linkedin"></i></a>
+           <a href="#"><i class="fa fa-github"></i></a>
+         </div>
+         <div>
             <i class="fa fa-map-marker"></i>
             <p><span>地图</span></p>
           </div>
@@ -24,27 +44,7 @@
             <i class="fa fa-envelope"></i>
             <p><a href="mailto:liuxue_oakleafage@gmail.com">liuxue_oakleafage@gmail.com</a></p>
           </div>
-        </div>
-  
-        <div class="footer-right">
-         <p class="footer-company-about">
-            <span>About the company</span>
-         </p>
-         <div class="footer-icons">
-           <a href="#"><i class="fa fa-facebook"></i></a>
-           <a href="#"><i class="fa fa-twitter"></i></a>
-           <a href="#"><i class="fa fa-linkedin"></i></a>
-           <a href="#"><i class="fa fa-github"></i></a>
-         </div>
         </div> 
-        <div class="footer-left">
-          <ul class="footer-links">
-           <li><a href="/aboutus">关于我们</a></li>
-           <li><a href="/news">留学咨讯</a></li>
-           <li><a href="/contactus">联系我们</a></li>
-           <li><a href="/cases">成功案例</a></li>
-           <li><a href="/survey">申请问卷</a></li>
-          </ul>
-        </div>   
+        
 </footer>
 <div class="footer">&copy Oakleafage.com 2018  |   <a href="/privacy">Privacy Statement</a>   |  <a href="/termofuse">Terms of Use</a></div>
