--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -232,31 +232,27 @@ header .jumbotron {
 
 .againtbox {
   
-  width: 100%;
+  width: 100px;
   display:block;
-  height:100%;
+  height:100px;
 }
 
-.image {
-  display: block;
-  padding: 0px;
-  float: left;
-  width: 33.33%;
-  border-radius: 10px;
-}
+
+
 
 .overlay {
-  position: absolute; 
-  bottom: 0; 
+  position: static; 
+  bottom: 20px; 
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1; 
   width: 100%;
+  height:100%;
   transition: .5s ease;
   opacity:0;
   color: white;
   font-size: 20px;
-  padding: 20px;
+  padding: 0px;
 	text-align: center;
 	border-radius: 10px;
 }
@@ -506,3 +502,18 @@ http://tool.c7sky.com/webcolor/
   background-color: #efefef;
   text-align: center;
 }
+
+
+body,html{margin:0;}
+.wpcf7-form-control-wrap input[type="text"], .wpcf7-form-control-wrap input[type="email"] {
+
+    background-color: #fff;
+
+    color: #000;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+
+    width: 50%;
+
+}
+p{display:inline-block;width:50%;}
