added form, image modal

--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -11,10 +11,10 @@
       <div class="row">
         <div class="col-sm-4">
           <h1 class="feedback-form-title">Send us feedback</h1>
-          <form class="feedback-form">
+          <form class="feedback-form",enctype="multipart/form-data">
             <div class="form-group">
               <label for="feedback-form-name">First Name</label>
-              <input type="text" class="form-control" id="feedback-form-firstname" placeholder="Enter your firstname">
+              <input type="text", class="form-control" id="feedback-form-firstname" placeholder="Enter your firstname">
             </div>
 
             <div class="form-group">
@@ -24,12 +24,12 @@
 
             <div class="form-group">
                 <label for="feedback-form-title">Email</label>
-                <input type="text" class="form-control" id="feedback-form-email" placeholder="Enter your lastname">
+                <input type="text" class="form-control" id="feedback-form-email" placeholder="Enter your Email">
             </div>
 
             <div class="form-group">
                 <label for="feedback-form-title">Phone</label>
-                <input type="text" class="form-control" id="feedback-form-phone" placeholder="Enter your lastname">
+                <input type="text" class="form-control" id="feedback-form-phone" placeholder="Enter your Phone number">
             </div>
 
             <div class="form-group">
@@ -120,10 +120,10 @@
             </div>
             <div class="form-group">
                 <label for="feedback-form-title">PassPort Upload</label>
-                <input type="file"  id="feedback-form-passport" accept=".jpg, .jpeg, .png">
+                <input type="file" name="photho" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
             </div>
             
-            <button type="submit" class="btn btn-default pull-right">Submit</button>
+            <input type="submit" class="btn btn-default pull-right">
           </form>
           
         </div><!-- primary -->
