--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -10,10 +10,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <h1 class="feedback-form-title">Send us feedback</h1>
-          <form class="feedback-form",enctype="multipart/form-data">
+          <h1 class="feedback-form-title">Survey</h1>
+          
+          <form class="feedback-form", enctype="multipart/form-data" method="post">
             <div class="form-group">
-              <label for="feedback-form-name">First Name</label>
+              <label for="feedback-form-name">First Name</label> 
               <input type="text", class="form-control" id="feedback-form-firstname" placeholder="Enter your firstname">
             </div>
 
@@ -120,7 +121,7 @@
             </div>
             <div class="form-group">
                 <label for="feedback-form-title">PassPort Upload</label>
-                <input type="file" name="photho" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
+                <input type="file" name="photo" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
             </div>
             
             <input type="submit" class="btn btn-default pull-right">
