--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -7,7 +7,7 @@
           <div class="jumbotron hidden-xs">
           </div>
         </header>
-    <div class="container">
+    <div class="container_feedback">
       <div class="row">
         <div class="col-sm-4">
           <h1 class="feedback-form-title">Survey</h1>
@@ -128,12 +128,7 @@
           </form>
           
         </div><!-- primary -->
-        <aside class="col-sm-8">
-          <div class="maincontent feedback">
-              <h2 class="article-title"></h2>
-              <div class="feedback-messages"></div>
-          </div>
-        </aside><!-- secondary -->
+
       </div>
       
     </div><!-- container -->
