--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -12,7 +12,7 @@
         <div class="col-sm-4">
           <h1 class="feedback-form-title">Survey</h1>
           
-          <form class="feedback-form", enctype="multipart/form-data" method="post">
+          <form class="feedback-form">
             <div class="form-group">
               <label for="feedback-form-name">First Name</label> 
               <input type="text", class="form-control" id="feedback-form-firstname" placeholder="Enter your firstname">
