fix footer style

--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -31,18 +31,18 @@
            <a href="#"><i class="fa fa-github"></i></a>
          </div>
          <div>
-            <i class="fa fa-map-marker"></i>
-            <p><span>地图</span></p>
+            <p><i class="fa fa-map-marker">&nbsp&nbsp地图</i></p>
+            
           </div>
   
           <div>
-            <i class="fa fa-phone"></i>
-            <p>+2173728660</p>
+            <p><i class="fa fa-phone">&nbsp&nbsp+2173728660</i></p>
+            
           </div>
   
           <div>
-            <i class="fa fa-envelope"></i>
-            <p><a href="mailto:liuxue_oakleafage@gmail.com">liuxue_oakleafage@gmail.com</a></p>
+            <p><i class="fa fa-envelope"><a href="mailto:liuxue_oakleafage@gmail.com">&nbsp&nbspliuxue_oakleafage@gmail.com</a></i></p>
+            
           </div>
         </div> 
         
