--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -286,7 +286,7 @@ http://tool.c7sky.com/webcolor/
 /* Footer left */
 .footer-distributed .footer-left {
 	width: 30%;
-	text-align: center;
+	text-align: right;
 	vertical-align: top
 }
 
@@ -324,6 +324,7 @@ http://tool.c7sky.com/webcolor/
 /* Footer Center */
 .footer-distributed .footer-center {
 	width: 35%;
+	text-align: center;
 }
 
 .footer-distributed .footer-center i {
@@ -380,7 +381,8 @@ http://tool.c7sky.com/webcolor/
 }
 
 .footer-distributed .footer-icons {
-	margin-top: 25px;
+  margin-top: 25px;
+  
  
 }
 
@@ -471,6 +473,7 @@ http://tool.c7sky.com/webcolor/
 
 .feedback-form {
   margin-top: 20px;
+  
   font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
 }
@@ -515,6 +518,12 @@ label {
 }
 
 .form-group {
-	float: left;
+	float: middle;
+}
+.container_feedback {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: 30%;
 }
 /* End of survey form*/
