--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+
 <html>
+        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+        
   <head><% include partials/template/head.ejs %></head>
+  
   <body id="<%= pageID %>">
       <header>
           <!-- smiling lady picture-->
@@ -132,6 +136,7 @@
       </div>
       
     </div><!-- container -->
+    
     <% include partials/template/jsdefaults.ejs %>
     <% include partials/template/header.ejs %>
     <% include partials/template/footer.ejs %>
