--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-
 <html>
-        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-        
   <head><% include partials/template/head.ejs %></head>
-  
   <body id="<%= pageID %>">
       <header>
           <!-- smiling lady picture-->
@@ -14,11 +10,10 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <h1 class="feedback-form-title">Survey</h1>
-          
-          <form class="feedback-form", enctype="multipart/form-data" method="post">
+          <h1 class="feedback-form-title">Send us feedback</h1>
+          <form class="feedback-form",enctype="multipart/form-data">
             <div class="form-group">
-              <label for="feedback-form-name">First Name</label> 
+              <label for="feedback-form-name">First Name</label>
               <input type="text", class="form-control" id="feedback-form-firstname" placeholder="Enter your firstname">
             </div>
 
@@ -125,7 +120,7 @@
             </div>
             <div class="form-group">
                 <label for="feedback-form-title">PassPort Upload</label>
-                <input type="file" name="photo" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
+                <input type="file" name="photho" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
             </div>
             
             <input type="submit" class="btn btn-default pull-right">
@@ -141,7 +136,6 @@
       </div>
       
     </div><!-- container -->
-    
     <% include partials/template/jsdefaults.ejs %>
     <% include partials/template/header.ejs %>
     <% include partials/template/footer.ejs %>
