--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -30,7 +30,7 @@
            <a href="#"><i class="fa fa-github"></i></a>
          </div>
          <div>
-            <p><i class="fa fa-map-marker">&nbsp&nbsp地图</i></p>
+            <p  style="margin-top:10px;"><i class="fa fa-map-marker">&nbsp&nbsp地图</i></p>
           </div>
   
           <div>
