add language switching and new images

--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -24,13 +24,18 @@
                   </li>
                   <li role="separator" class="divider"></li> 
                 <% }); %>
+             
               </ul>
           </li>
+          
           <!-- take out these endpoints
           <li><a href="/feedback">联系我们</a></li>
           <li><a href="/chat">留言</a></li>
           -->
-           <li><a href="/cases"><%=translation.NAV_MENU.CASES%></a></li>
+          <li><a href="/cases"><%=translation.NAV_MENU.CASES%></a></li>
+     
+          <li> <a href='?clang=cn'><img src='images/cn.svg' width= 30 height= 20 /></a></li>
+          <li> <a href='?clang=en'><img src='images/us.svg' width= 30 height= 20 /></a></li>
         </ul><!-- nav -->
       </div><!-- navbar-collapse -->
     </div><!-- container -->
